stuf/src/p3/tests/t163.err
Semantic error on line 6: The given expression is not a legal type for the size of array <some_array>.  The size must be an integer.  Given expression is of type string.
