stuf/src/p3/tests/t163.gpl
// There is an error on line 6 because the index
// must be an integer. If this occurs the compiler
// should recover by adding some_array to the 
// symbol table as a single element array.
// So, line 7 should not be an error.
int some_array["fdsa"];
int y=some_array[0];
